-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15.0 Beta2
-
None
-
-
1f1f6890fdbc98840a5bb56b0c094c271739ddff (qt/qtquick3d/5.15)
Q_ASSERT(c) in QQuick3DObjectPrivate::refSceneManager() will always trigger if adding model to scene in design studio.
| For Gerrit Dashboard: QTBUG-82688 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 293041,2 | Amend previous fix to the material handling in QQuick3DModel | 5.15 | qt/qtquick3d | Status: MERGED | +2 | 0 |