Amend previous fix to the material handling in QQuick3DModel

Check if we've received a scene manager before setting it on the
materials. If no scene manager has been set defer until one is set.

Fixes: QTBUG-82688
Change-Id: I642a27ac21f0e1f40d6a32d8286b6991ffbba459
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>